feat: add adaptive layout for tablet and mobile

--- a/shelter/src/sass/abstract/_constants.scss
+++ b/shelter/src/sass/abstract/_constants.scss
@@ -11,7 +11,9 @@ $color-primary: #F1CDB3;
 $color-primary-light: #FDDCC4;
 
 $desktop-width: 1280px;
+$laptop-width: 1024px;
 $tablet-width: 768px;
-$mobile-width: 320px;
-
+$less-tablet-width: 767px;
+$mobile-XL-width: 550px;
+$mobile-S-width: 320px;
 $content-width: 1280px;
