--- a/shelter/src/sass/abstract/_mixins.scss
+++ b/shelter/src/sass/abstract/_mixins.scss
@@ -5,11 +5,22 @@
     font-style: $style;
 }
 
+@mixin media-laptop {
+    @media (max-width: $laptop-width) { @content; }
+}
 
 @mixin media-tablet {
     @media (max-width: $tablet-width) { @content; }
 }
 
-@mixin media-mobile {
-    @media (max-width: $mobile-width) { @content; }
+@mixin media-less-tablet {
+    @media (max-width: $less-tablet-width) { @content; }
+}
+
+@mixin media-mobile-XL {
+    @media (max-width: $mobile-XL-width) { @content; }
+}
+
+@mixin media-mobile-S {
+    @media (max-width: $mobile-S-width) { @content; }
 }
