--- a/shelter/src/sass/base/_buttons.scss
+++ b/shelter/src/sass/base/_buttons.scss
@@ -25,7 +25,7 @@
     color: $color-dark-3xl;
     border-radius: 100px;
     border: solid 2px $color-primary;
-    background-color: $color-light-xl;
+    background-color: $color-light-s;
     cursor: pointer;
     @extend %transition;
     &:hover {
