--- a/shelter/src/sass/layouts/_header.scss
+++ b/shelter/src/sass/layouts/_header.scss
@@ -1,9 +1,16 @@
 .header-content {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     height: 60px;
     margin: 0 40px 0 40px;
     padding: 30px 0 30px 0;
+    @include media-laptop {
+        margin: 0 30px 0 30px; 
+    }
+    @include media-mobile-XL {
+        margin: 0 20px 0 20px; 
+    }
 }
 
 .header-logo {
@@ -35,6 +42,10 @@
     justify-content: space-between;
     list-style: none;
     margin: 16px 0 16px 0;
+    padding: 0 0 0 0;
+    @include media-less-tablet {
+        display: none;
+    }
     li {
         margin: 0 0 0 36px;
         &:active {
@@ -43,6 +54,7 @@
             transition: all 100ms ease-in-out;
         }
         &:first-child {
+            margin: 0 0 0 0;
             border-bottom: solid 3px $color-primary;
         }
         &:first-child a {
@@ -61,5 +73,24 @@
                 color: $color-light-s;
             }
         }
+    }
+}
+
+.header-hamburger {
+    z-index: 1;
+    display: none;
+    width: 30px;
+    height: 22px;
+    @extend %transition;
+    @include media-less-tablet {
+        display: flex;
+        justify-content: space-between;
+        flex-direction: column;
+        cursor: pointer;
+    }
+    .header-hamburger-line {
+    background-color: $color-primary;
+    width: 30px;
+    height: 2px;
     }
 }
