--- a/shelter/src/sass/layouts/_help.scss
+++ b/shelter/src/sass/layouts/_help.scss
@@ -3,9 +3,18 @@
     flex-direction: column;
     align-items: center;
     margin: 0 40px 0 40px;
+    @include media-laptop {
+        margin: 0 30px 0 30px;
+    }
+    @include media-mobile-XL {
+        margin: 0 10px 0 10px;
+    }
     h2 {
         margin: 80px 0 60px 0;
         text-align: center;
+        @include media-mobile-XL {
+            margin: 42px 0 42px 0;
+        }
     }
 }
 
@@ -15,6 +24,15 @@
     flex-wrap: wrap;
     justify-content: center;
     padding: 0 0 45px 0;
+    width: 100%;
+    @include media-laptop {
+        justify-content: space-between;
+        width: 89%;
+    }
+    @include media-mobile-XL {
+        padding: 0 0 10px 0;
+        width: 96%;
+    }
 }
 
 .help-card {
@@ -23,12 +41,30 @@
     align-items: center;
     justify-content: space-between;
     height: 113px;
-    margin: 0 60px 55px 60px;
+    margin: 0 5% 55px 5%;
+    @include media-laptop {
+        width: 170px;
+        margin: 0 0 55px 0;
+    }
+    @include media-mobile-XL {
+        height: 87px;
+        width: 130px;
+        margin: 0 0 30px 0;
+    }
     p {
         font-family: 'Georgia', serif;
         @include font(2.0rem, 115%, 400, normal);
         color: $color-dark-l;
         letter-spacing: 0.06em;
         margin: 0 0 0 0;
+        @include media-mobile-XL {
+            @include font(1.5rem, 115%, 400, normal);
+        }
+    }
+    img {
+        @include media-mobile-XL {
+            width: 50px;
+            height: 50px;
+        }
     }
 }
