--- a/shelter/src/sass/style.css
+++ b/shelter/src/sass/style.css
@@ -347,7 +347,8 @@ h2 {
   justify-content: center;
   align-items: center;
   margin: 0 40px 0 40px;
-  min-height: 588px;
+  padding: 80px 0 100px 0;
+  min-height: 408px;
 }
 @media (max-width: 1024px) {
   .about-content {
@@ -361,13 +362,14 @@ h2 {
 }
 @media (max-width: 550px) {
   .about-content {
+    padding: 42px 0 42px 0;
     margin: 0 15px 0 15px;
   }
 }
 .about-content div {
   display: flex;
   flex-direction: column;
-  padding: 0 0 16px 10%;
+  padding: 0 0 0 10%;
   max-width: 430px;
 }
 @media (max-width: 768px) {
@@ -384,16 +386,7 @@ h2 {
 }
 .about-content h2 {
   padding: 0 0 0 0;
-}
-@media (max-width: 768px) {
-  .about-content h2 {
-    margin: 80px 0 0 0;
-  }
-}
-@media (max-width: 550px) {
-  .about-content h2 {
-    margin: 42px 0 0 0;
-  }
+  margin: 0 0 0 0;
 }
 .about-content p {
   font-size: 1.5rem;
@@ -407,6 +400,9 @@ h2 {
   .about-content p {
     text-align: justify;
   }
+  .about-content p:nth-child(3) {
+    margin: 22px 0 0 0;
+  }
 }
 .about-content img {
   max-width: 35%;
@@ -414,13 +410,14 @@ h2 {
 @media (max-width: 768px) {
   .about-content img {
     order: 1;
-    max-width: 260px;
-    margin: 80px 0 100px 0;
+    max-width: 300px;
+    margin: 80px 0 0 0;
   }
 }
 @media (max-width: 550px) {
   .about-content img {
-    margin: 38px 0 42px 0;
+    max-width: 260px;
+    margin: 40px 0 0 0;
   }
 }
 
@@ -477,7 +474,7 @@ h2 {
 }
 @media (max-width: 550px) {
   .switch-pet-block-card > button:first-child {
-    margin: 0 7px 0 0;
+    margin: 0 11px 0 0;
   }
 }
 .switch-pet-block-card > button:last-child {
@@ -485,7 +482,7 @@ h2 {
 }
 @media (max-width: 550px) {
   .switch-pet-block-card > button:last-child {
-    margin: 0 0 0 7px;
+    margin: 0 0 0 11px;
   }
 }
 @media (max-width: 767px) {
@@ -697,8 +694,8 @@ h2 {
 }
 @media (max-width: 550px) {
   .in-addition-content img {
-    margin: 43px 0 0 0;
-    max-width: 92%;
+    margin: 42px 0 0 0;
+    max-width: 93%;
   }
 }
 .in-addition-content div {
@@ -734,7 +731,7 @@ h2 {
   font-style: normal;
   color: #545454;
   letter-spacing: 0.06em;
-  margin: 18px 0 18px 0;
+  margin: 21px 0 18px 0;
 }
 @media (max-width: 550px) {
   .in-addition-content p:nth-child(2) {
@@ -846,7 +843,7 @@ h2 {
 }
 @media (max-width: 550px) {
   .footer-content img {
-    max-width: 87%;
+    max-width: 86%;
   }
 }
 
@@ -912,7 +909,7 @@ h2 {
 }
 
 .address {
-  max-width: 310px;
+  max-width: 305px;
   padding: 0 0 0 0;
 }
 .address h2 {
@@ -971,9 +968,20 @@ h2 {
 .header-pets-content {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   height: 60px;
   margin: 0 40px 0 40px;
   padding: 30px 0 30px 0;
+}
+@media (max-width: 1024px) {
+  .header-pets-content {
+    margin: 0 30px 0 30px;
+  }
+}
+@media (max-width: 550px) {
+  .header-pets-content {
+    margin: 0 20px 0 20px;
+  }
 }
 
 .header-pets-logo {
@@ -985,7 +993,7 @@ h2 {
 .header-pets-logo p:first-child {
   font-family: "Georgia", serif;
   font-size: 3.2rem;
-  line-height: 3.5rem;
+  line-height: 110%;
   font-weight: 400;
   font-style: normal;
   margin: 0;
@@ -1010,6 +1018,12 @@ h2 {
   justify-content: space-between;
   list-style: none;
   margin: 16px 0 16px 0;
+  padding: 0 0 0 0;
+}
+@media (max-width: 767px) {
+  .header-pets-navigation ul {
+    display: none;
+  }
 }
 .header-pets-navigation ul li {
   margin: 0 0 0 36px;
@@ -1018,6 +1032,9 @@ h2 {
   color: #FAFAFA;
   border-bottom: solid 3px #F1CDB3;
   transition: all 100ms ease-in-out;
+}
+.header-pets-navigation ul li:first-child {
+  margin: 0 0 0 0;
 }
 .header-pets-navigation ul li:nth-child(2) {
   border-bottom: solid 3px #F1CDB3;
@@ -1036,6 +1053,29 @@ h2 {
 }
 .header-pets-navigation ul li a:hover {
   color: #292929;
+}
+.header-pets-navigation ul li a:active {
+  color: #545454;
+}
+
+.header-hamburger {
+  z-index: 1;
+  display: none;
+  width: 30px;
+  height: 22px;
+}
+@media (max-width: 767px) {
+  .header-hamburger {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    cursor: pointer;
+  }
+}
+.header-hamburger .header-hamburger-line {
+  background-color: #F1CDB3;
+  width: 30px;
+  height: 2px;
 }
 
 .our-friends-pets {
