--- a/shelter/src/sass/style.css
+++ b/shelter/src/sass/style.css
@@ -1073,7 +1073,7 @@ h2 {
   }
 }
 .header-hamburger .header-hamburger-line {
-  background-color: #F1CDB3;
+  background-color: #000000;
   width: 30px;
   height: 2px;
 }
