--- a/shelter/src/sass/abstract/_constants.scss
+++ b/shelter/src/sass/abstract/_constants.scss
@@ -7,6 +7,7 @@ $color-dark-l: #545454;
 $color-dark-xl: #4C4C4C;
 $color-dark-2xl: #444444;
 $color-dark-3xl: #292929;
+$color-dark-4xl: #000000;
 $color-primary: #F1CDB3;
 $color-primary-light: #FDDCC4;
 
