--- a/shelter/src/sass/layouts/our-friends-pets.scss
+++ b/shelter/src/sass/layouts/our-friends-pets.scss
@@ -6,14 +6,24 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 0 40px 0 40px;
+    margin: 0 20px 0 20px;
+    @include media-laptop {
+        margin: 0 30px 0 30px; 
+    }
+    @include media-mobile-XL {
+        margin: 0 10px 0 10px; 
+    }
     h1 {
         font-family: 'Georgia', serif;
         @include font(3.5rem, 130%, 400, normal);
         color: $color-dark-l;
         letter-spacing: 0.06em;
-        margin: 80px 0 45px 0;
+        margin: 80px 0 0 0;
         text-align: center;
+        @include media-mobile-XL {
+            @include font(2.5rem, 130%, 400, normal);
+            margin: 42px 0 13px 0;
+        }
     }
     .button-type-1 {
         width: 261px;
@@ -27,6 +37,13 @@
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
+    padding: 42px 20px 0 20px;
+    max-height: 1395px;
+    overflow-y: hidden;
+    @include media-laptop {
+        padding: 14px 25px 0 25px;
+        justify-content: space-evenly; 
+    }
 }
 
 .pet-card-pets {
@@ -50,7 +67,7 @@
         margin: 0 0 30px 0;
     }
     &:hover {
-        transform: scale(1.05);
+        transform: scale(1.02);
         background-color: $color-light-xl;
         box-shadow: 0 5px 10px 3px rgba(0, 0, 0, 0.2);
         cursor: pointer;
@@ -64,11 +81,19 @@
 .switch-block-pets {
     display: flex;
     align-items: center;
+    justify-content: space-between; 
     margin: 45px 0 100px 0;
+    width: clamp(300px, 92%, 340px);
+    @include media-laptop {
+        margin: 25px 0 76px 0;
+    }
+    @include media-mobile-XL {
+        margin: 25px 0 43px 0;
+    }
     button {
         font-family: 'Georgia', serif;
         @include font(2.0rem, 115%, 400, normal);
-        margin: 0 10px 0 10px;
+        //margin: 0 10px 0 10px;
     }
     button:nth-child(3) {
         background-color: $color-primary;
@@ -79,7 +104,7 @@
         }
     }
     button:nth-child(1), button:nth-child(2) {
-        margin: 0 10px 0 10px;
+        margin: 0 0px 0 0px;
         border-color: $color-dark-s;
         color: $color-dark-s;
         pointer-events: none;
