--- a/shelter/src/sass/style.css
+++ b/shelter/src/sass/style.css
@@ -1086,7 +1086,17 @@ h2 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 0 40px 0 40px;
+  margin: 0 20px 0 20px;
+}
+@media (max-width: 1024px) {
+  .our-friends-pets-content {
+    margin: 0 30px 0 30px;
+  }
+}
+@media (max-width: 550px) {
+  .our-friends-pets-content {
+    margin: 0 10px 0 10px;
+  }
 }
 .our-friends-pets-content h1 {
   font-family: "Georgia", serif;
@@ -1096,8 +1106,17 @@ h2 {
   font-style: normal;
   color: #545454;
   letter-spacing: 0.06em;
-  margin: 80px 0 45px 0;
+  margin: 80px 0 0 0;
   text-align: center;
+}
+@media (max-width: 550px) {
+  .our-friends-pets-content h1 {
+    font-size: 2.5rem;
+    line-height: 130%;
+    font-weight: 400;
+    font-style: normal;
+    margin: 42px 0 13px 0;
+  }
 }
 .our-friends-pets-content .button-type-1 {
   width: 261px;
@@ -1110,6 +1129,15 @@ h2 {
   align-items: center;
   justify-content: space-between;
   flex-wrap: wrap;
+  padding: 42px 20px 0 20px;
+  max-height: 1395px;
+  overflow-y: hidden;
+}
+@media (max-width: 1024px) {
+  .pet-block-card-pets {
+    padding: 14px 25px 0 25px;
+    justify-content: space-evenly;
+  }
 }
 
 .pet-card-pets {
@@ -1136,7 +1164,7 @@ h2 {
   margin: 0 0 30px 0;
 }
 .pet-card-pets:hover {
-  transform: scale(1.05);
+  transform: scale(1.02);
   background-color: #FFFFFF;
   box-shadow: 0 5px 10px 3px rgba(0, 0, 0, 0.2);
   cursor: pointer;
@@ -1149,7 +1177,19 @@ h2 {
 .switch-block-pets {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   margin: 45px 0 100px 0;
+  width: clamp(300px, 92%, 340px);
+}
+@media (max-width: 1024px) {
+  .switch-block-pets {
+    margin: 25px 0 76px 0;
+  }
+}
+@media (max-width: 550px) {
+  .switch-block-pets {
+    margin: 25px 0 43px 0;
+  }
 }
 .switch-block-pets button {
   font-family: "Georgia", serif;
@@ -1157,7 +1197,6 @@ h2 {
   line-height: 115%;
   font-weight: 400;
   font-style: normal;
-  margin: 0 10px 0 10px;
 }
 .switch-block-pets button:nth-child(3) {
   background-color: #F1CDB3;
@@ -1168,7 +1207,7 @@ h2 {
   border-color: #F1CDB3 !important;
 }
 .switch-block-pets button:nth-child(1), .switch-block-pets button:nth-child(2) {
-  margin: 0 10px 0 10px;
+  margin: 0 0px 0 0px;
   border-color: #CDCDCD;
   color: #CDCDCD;
   pointer-events: none;
