--- a/shelter/src/sass/layouts/_header-pets.scss
+++ b/shelter/src/sass/layouts/_header-pets.scss
@@ -78,7 +78,7 @@
     }
 }
 
-.header-hamburger {
+.header-pets-hamburger {
     z-index: 1;
     display: none;
     width: 30px;
@@ -90,7 +90,7 @@
         flex-direction: column;
         cursor: pointer;
     }
-    .header-hamburger-line {
+    .header-pets-hamburger-line {
     background-color: $color-dark-4xl;
     width: 30px;
     height: 2px;
