--- a/shelter/src/sass/style.css
+++ b/shelter/src/sass/style.css
@@ -22,7 +22,7 @@
   font-weight: 700;
   src: local("Georgia"), url("../../fonts/georgia-bold.woff2") format("woff2"), url("../../fonts/georgia-bold.woff") format("woff"), url("../../fonts/georgia-bold.ttf") format("ttf");
 }
-.pet-card-pets, .header-pets-navigation ul li a, .header-pets-logo, .address p, .contacts p, .in-addition-content a p, .pet-card, .header-hamburger, .header-navigation ul li a, .header-logo, .button-type-3, .button-type-2, .button-type-1 {
+.pet-card-pets, .header-pets-hamburger, .header-pets-navigation ul li a, .header-pets-logo, .address p, .contacts p, .in-addition-content a p, .pet-card, .header-hamburger, .header-navigation ul li a, .header-logo, .button-type-3, .button-type-2, .button-type-1 {
   transition: all 300ms ease-in-out;
 }
 
@@ -731,7 +731,7 @@ h2 {
   font-style: normal;
   color: #545454;
   letter-spacing: 0.06em;
-  margin: 21px 0 18px 0;
+  margin: 19px 0 18px 0;
 }
 @media (max-width: 550px) {
   .in-addition-content p:nth-child(2) {
@@ -739,6 +739,7 @@ h2 {
     line-height: 160%;
     font-weight: 400;
     font-style: normal;
+    margin: 20px 0 20px 0;
     letter-spacing: 0em;
   }
 }
@@ -877,7 +878,7 @@ h2 {
 }
 @media (max-width: 768px) {
   .contacts a:nth-child(3) p {
-    margin: 0 0 70px 0;
+    margin: 0 0 68px 0;
   }
 }
 @media (max-width: 550px) {
@@ -938,7 +939,7 @@ h2 {
 }
 @media (max-width: 768px) {
   .address a:nth-child(3) p {
-    margin: 0 0 70px 0;
+    margin: 0 0 68px 0;
   }
 }
 @media (max-width: 550px) {
@@ -1058,21 +1059,21 @@ h2 {
   color: #545454;
 }
 
-.header-hamburger {
+.header-pets-hamburger {
   z-index: 1;
   display: none;
   width: 30px;
   height: 22px;
 }
 @media (max-width: 767px) {
-  .header-hamburger {
+  .header-pets-hamburger {
     display: flex;
     justify-content: space-between;
     flex-direction: column;
     cursor: pointer;
   }
 }
-.header-hamburger .header-hamburger-line {
+.header-pets-hamburger .header-pets-hamburger-line {
   background-color: #000000;
   width: 30px;
   height: 2px;
@@ -1129,7 +1130,7 @@ h2 {
   align-items: center;
   justify-content: space-between;
   flex-wrap: wrap;
-  padding: 42px 20px 0 20px;
+  padding: 44px 20px 0 20px;
   max-height: 1395px;
   overflow-y: hidden;
 }
