--- a/shelter/src/sass/style.css
+++ b/shelter/src/sass/style.css
@@ -26,6 +26,10 @@
   transition: all 300ms ease-in-out;
 }
 
+.header-overlay-show, .header-overlay {
+  transition: all 500ms ease-in-out;
+}
+
 html {
   font-family: "Arial", sans-serif;
   font-size: 10px;
@@ -80,6 +84,11 @@ h2 {
 .wrapper {
   max-width: 1280px;
   margin: auto;
+}
+
+.no-scroll {
+  position: fixed;
+  width: 100%;
 }
 
 .button-type-1 {
@@ -184,6 +193,22 @@ h2 {
   transform: scale(1.03);
 }
 
+@media (max-width: 767px) {
+  .header-navigation {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    right: 0;
+    top: 0;
+    height: 100%;
+    width: 0px;
+    z-index: 1;
+    background-color: #292929;
+    transition: all 500ms ease-in-out;
+  }
+}
+
 .header-navigation ul {
   display: flex;
   justify-content: space-between;
@@ -193,11 +218,20 @@ h2 {
 }
 @media (max-width: 767px) {
   .header-navigation ul {
-    display: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 0 0 0;
+    overflow: hidden;
   }
 }
 .header-navigation ul li {
   margin: 0 0 0 36px;
+}
+@media (max-width: 767px) {
+  .header-navigation ul li {
+    margin: 40px 0 40px 0;
+  }
 }
 .header-navigation ul li:active {
   color: #FAFAFA;
@@ -208,11 +242,17 @@ h2 {
   margin: 0 0 0 0;
   border-bottom: solid 3px #F1CDB3;
 }
+@media (max-width: 767px) {
+  .header-navigation ul li:first-child {
+    margin: 40px 0 40px 0;
+  }
+}
 .header-navigation ul li:first-child a {
   color: #FAFAFA;
   pointer-events: none;
 }
 .header-navigation ul li a {
+  white-space: nowrap;
   font-size: 1.5rem;
   line-height: 160%;
   font-weight: 400;
@@ -226,25 +266,64 @@ h2 {
 .header-navigation ul li a:active {
   color: #FAFAFA;
 }
+@media (max-width: 767px) {
+  .header-navigation ul li a {
+    font-size: 3.2rem;
+    line-height: 160%;
+    font-weight: 400;
+    font-style: normal;
+    transition: all 0ms ease-in-out;
+  }
+}
+
+@media (max-width: 767px) {
+  .header-navigation-show {
+    transition: all 500ms ease-in-out;
+    width: 320px;
+  }
+}
+@media (max-width: 767px) {
+  .header-navigation-show ul {
+    display: flex;
+  }
+}
 
 .header-hamburger {
-  z-index: 1;
   display: none;
+  justify-content: space-between;
+  flex-direction: column;
+  cursor: pointer;
+  z-index: 1;
   width: 30px;
   height: 22px;
 }
 @media (max-width: 767px) {
   .header-hamburger {
     display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-    cursor: pointer;
   }
 }
 .header-hamburger .header-hamburger-line {
   background-color: #F1CDB3;
   width: 30px;
   height: 2px;
+}
+
+.rotate-header-hamburger {
+  transform: rotate(90deg);
+}
+
+.header-overlay {
+  position: fixed;
+  right: 0;
+  top: 0;
+  height: 100%;
+  width: 0%;
+  z-index: 1;
+  background-color: rgba(38, 18, 0, 0.555);
+}
+
+.header-overlay-show {
+  width: 100%;
 }
 
 .not-only {
