feat: add interactive hamburger menu for pets page

--- a/shelter/src/sass/abstract/_constants.scss
+++ b/shelter/src/sass/abstract/_constants.scss
@@ -11,6 +11,11 @@ $color-dark-4xl: #000000;
 $color-primary: #F1CDB3;
 $color-primary-light: #FDDCC4;
 
+$color-menu-light: #FFFFFF;
+$color-menu-dark: #292929;
+
+$color-menu-curtain: #29292999;
+
 $desktop-width: 1280px;
 $laptop-width: 1024px;
 $tablet-width: 768px;
