--- a/shelter/src/sass/layouts/_header-pets.scss
+++ b/shelter/src/sass/layouts/_header-pets.scss
@@ -37,6 +37,22 @@
     }
 }
 
+.header-pets-navigation {
+    @include media-less-tablet {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: fixed;
+        right: 0;
+        top: 0;
+        height: 100%;
+        width: 0px;
+        z-index: 1;
+        background-color: $color-menu-light;
+        transition: all 500ms ease-in-out;
+    }
+}
+
 .header-pets-navigation ul {
     display: flex;
     justify-content: space-between;
@@ -44,10 +60,17 @@
     margin: 16px 0 16px 0;
     padding: 0 0 0 0;
     @include media-less-tablet {
-        display: none;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 0 0 0 0;
+        overflow: hidden;
     }
     li {
         margin: 0 0 0 36px;
+        @include media-less-tablet {
+            margin: 40px 0 40px 0;
+        }
         &:active {
             color: $color-light-s;
             border-bottom: solid 3px $color-primary;
@@ -55,15 +78,19 @@
         }
         &:first-child {
             margin: 0 0 0 0;
+            @include media-less-tablet {
+                margin: 40px 0 40px 0;
+            }
         }
         &:nth-child(2) {
             border-bottom: solid 3px $color-primary;
         }
         &:nth-child(2) a {
-            color: $color-dark-3xl;
-            pointer-events: none;
+            color: $color-dark-3xl !important; 
+            cursor: none;
         }
         a {
+            white-space: nowrap;
             @include font(1.5rem, 160%, 400, normal);
             text-decoration: none;
             color: $color-dark-l;
@@ -74,25 +101,62 @@
             &:active {
                 color: $color-dark-l;
             }
+            @include media-less-tablet {
+                @include font(3.2rem, 160%, 400, normal);
+                transition: all 0ms ease-in-out;
+            }
+        }
+    }
+}
+
+.header-pets-navigation-show {
+    @include media-less-tablet {
+        transition: all 500ms ease-in-out;
+        width: 320px;
+    }
+    ul {
+        @include media-less-tablet {
+            display: flex;
         }
     }
 }
 
 .header-pets-hamburger {
-    z-index: 1;
     display: none;
+    justify-content: space-between;
+    flex-direction: column;
+    cursor: pointer;
+    z-index: 1;
     width: 30px;
     height: 22px;
     @extend %transition;
     @include media-less-tablet {
         display: flex;
-        justify-content: space-between;
-        flex-direction: column;
-        cursor: pointer;
     }
     .header-pets-hamburger-line {
     background-color: $color-dark-4xl;
     width: 30px;
     height: 2px;
     }
+}
+
+.rotate-header-pets-hamburger {
+    transform: rotate(90deg);
+}
+
+.header-pets-overlay {
+    position: fixed;
+    right: 0;
+    top: 0;
+    height: 100%;
+    width: 0%;
+    z-index: 1;
+    background-color: $color-menu-curtain;
+    @extend %transition-slow;
+}
+
+.header-pets-overlay-show {
+    width: 100%;
+    height: 100%;
+    @extend %transition-slow;
 }
