--- a/shelter/src/sass/style.scss
+++ b/shelter/src/sass/style.scss
@@ -3,6 +3,7 @@
 @import "abstract/constants";
 @import "abstract/mixins";
 @import "abstract/placeholders";
+@import "abstract/keyframes";
 
 //base
 @import "base/base";
